<resources>
    <string name="app_name">RFID Stock Pro</string>
    <string name="continue_txt">Continue</string>
    <string name="rfid_stock_pro">RFiD Stock Pro</string>
    <string name="welcome">Welcome</string>
    <string name="login_or_sign_up_to_access_your_account">Login or Sign up to access your\n account</string>


    <string-array name="time_filters">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="connecting">Connecting....</string>

    <string name="close">Close</string>
    <string name="ok">OK</string>

    <string name="Connect">Connect Scanner</string>
    <string name="disConnect">Disconnect</string>
    <string name="disConnectForSecond">Disconnect\n(Disconnect after %ds)</string>
    <string name="disConnectForMinute">Disconnect\n(Disconnect after %dMin)</string>


    <string name="scanning">Scanning...</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">No Matching</string>
    <string name="none_found">Not found</string>
    <string name="title_paired_devices">Matched</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_uhfmain">UHF</string>

    <string name="clear_historical_records">Empty historical records</string>

    <string name="invalid_bluetooth_address">Invalid Bluetooth address</string>

    <string name="paired">paired</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>

    <string name="history_connected_device">Historically connected devices</string>
    <string name="no_history">No history</string>

    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="title_stop_read_card">Please stop reading cards!</string>

    <string name="permission_cancel">Exit application</string>
    <string name="permission">Permission</string>
    <string name="open_location_msg">The application requires enable location, Otherwise, the Bluetooth function cannot be used normally.</string>
    <string name="open_location">Enable Location</string>

    <string name="permission_enable">Enable Permissions</string>
    <string name="permission_external_storage">The application requires storage permissions, otherwise it cannot be used normally.</string>

    <string name="connect_success">Successful connection</string>
    <string name="permission_location">The application requires location permissions, otherwise it cannot be used normally.</string>
    <string name="permission_bluetooth">The application requires Bluetooth permissions, otherwise it cannot be used normally.</string>

    <string name="uhf_msg_inventory_stop_fail">Stop failure</string>

    <string name="uhf_title_filter">filter</string>
    <string name="tvPtr">Ptr：</string>
    <string name="tvLen_Data">Len：</string>
    <string name="tvData_Read">Data：</string>
    <string name="uhf_msg_r2000_tip"></string>
    <string name="setup">Setup</string>

    <string name="tv_phase">Phase</string>
    <string name="workTime">WorkTime</string>
    <string name="second">s</string>
    <string name="tvAll">All：</string>
    <string name="tvTagCount">Count</string>

    <string name="rbInventorySingle">Single</string>
    <string name="rbInventoryLoop">Auto</string>
    <string name="title_stop_Inventory">Stop</string>
    <string name="title_stop">Stop</string>
    <string name="btClear">Clear</string>

    <string name="msg_copy_clipboard">TAG has been copied to clipboard</string>

    <string name="uhf_msg_set_filter_fail">Set the filter failure</string>
    <string name="uhf_msg_set_filter_fail2">Set the filter failure(length error)</string>
    <string name="uhf_msg_set_filter_succ">Set the filter success</string>

    <string name="msg_disable_succ">Disable success</string>
    <string name="msg_disable_fail">Disable fail</string>

    <string name="title_inventory">Inventory</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="owner">Owner</string>
    <string name="manager">Manager</string>
    <string name="staff">Staff</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="dashboard">Dashboard</string>
    <string name="otp_verified_successfully">OTP Verified Successfully!</string>
    <string name="account_created_login_now">Account Created - Login Now</string>
    <string name="we_sent_a_code_to">We sent a code to %1$s</string>
    <string name="login_successful">Login successful</string>
    <string name="account_is_not_active">Account is not active</string>
    <string name="your_account_is_not_active_contact_support">Your account is not active. Contact support.</string>
    <string name="uploading_please_wait">Uploading... Please wait</string>
    <string name="upload_successful">Upload Successful!</string>
    <string name="upload_failed">Upload Failed: %1$s</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="this_email_is_already_registered">This email is already registered</string>
    <string name="rfid_tags">RFID Tags</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="by_signing_in_with_an_account_you_agree_to_so_s_terms_of_service_and_privacy_policy">By signing in with an account, you agree to SO\'s \n Terms of Service and Privacy Policy.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price($)</string>
    <string name="product_price">Price</string>
    <string name="color">Color</string>
    <string name="jewel_code">Jewel Code</string>
    <string name="category_code">Category</string>
    <string name="sku">SKU</string>
    <string name="total_price">Price</string>
    <string name="total_gross_wt">Total Gross Wt</string>
    <string name="total_dia">Total Dia</string>
    <string name="write">Write...</string>
    <string name="add_item">Add item</string>
    <string name="change">Change</string>
    <string name="connect_scanner">Connect Scanner</string>
    <string name="buy">Buy</string>
    <string name="_1_product">1 Product</string>
    <string name="successfully_added">Successfully Added!!</string>
    <string name="one_products_successfully_scanned_and_confirmed_with_rfid_quick_accurate_and_efficient_tracking_in_action">One products successfully scanned and confirmed with RFID! Quick, accurate, and efficient tracking in action.</string>
    <string name="go_to_product_list">Go to Product List</string>
    <string name="add">Add</string>
    <string name="start_scanning">Start scanning...</string>
    <string name="with_rfid_boosting_efficiency_n_one_tag_at_a_time">With RFID boosting efficiency\n one tag at a time!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_management">Product management</string>
    <string name="load_more">Load more</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="action">Action</string>
    <string name="locate">Locate</string>
    <string name="edit">Edit</string>
    <string name="change_underline"><u>Change</u></string>
    <string name="oops_product_id_not_found">Oops! Product ID not found</string>
    <string name="active">Active</string>
    <string name="update">Update</string>
    <string name="update_tag">Update Tag</string>
    <string name="styleno">StyleNo</string>
    <string name="delete_product">Delete Product</string>
    <string name="are_you_sure_you_want_to_delete_this_product_and_its_media">Are you sure you want to delete this product and its media?</string>
    <string name="delete">Delete</string>
    <string name="start_locating">Start Locating</string>
    <string name="locate_tag">"Locate Tag "</string>
    <string name="in_out_ntracker">In/Out\nTracker</string>
    <string name="in_out_ntracker_header">In/Out Tracker</string>
    <string name="collection_name">Collection Name</string>
    <string name="create_collection">Create Collection</string>
    <string name="creating_collection">Creating Collection</string>
    <string name="add_to_collection">Add To Collection</string>
    <string name="browse_product">Browse Product</string>
    <string name="collection_already_exists">Collection already exists</string>
    <string name="no_items_found">No items found</string>
    <string name="no_product_found">No Product Found</string>
    <string name="next">Next</string>
    <string name="list_of_products">List Of Products</string>
    <string name="are_you_sure_you_want_to_delete_this_product">Are you sure you want to delete this product</string>
    <string name="add_more_product">Add More Product</string>
    <string name="track_collection">Track Collection</string>
    <string name="please_wait">Please wait...</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="are_you_sure_you_want_to_delete_this_collection">Are you sure you want to delete this collection?</string>
    <string name="imported_header">Imported Header</string>
    <string name="import_title">Import</string>
    <string name="import_excel_file">Import Excel file</string>
    <string name="choose_the_excel_file_xls_or_xlsx_nfrom_your_device">Choose the Excel file (.xls or .xlsx)\nfrom your device.</string>
    <string name="file_uploaded_successfully">File uploaded successfully!</string>
    <string name="back">Back</string>
    <string name="upload_file">Upload file</string>
    <string name="review_data">Review data</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="tag_id_not_added">Tag id not added</string>
    <string name="no_collecton_found">No Collecton found</string>


    <!-- <string-array name="system_headers">
         <item>Title</item>
         <item>Price</item>
         <item>Category</item>
         <item>Style No</item>
         <item>Description</item>
         <item>Compressed Image</item>
         <item>Compressed Video</item>
         <item>Tag ID</item>
         &lt;!&ndash; Add more fields if needed &ndash;&gt;
     </string-array>-->
    <string-array name="system_headers">
        <item>Title</item>
        <item>Style No</item>
        <item>Category</item>
        <item>SKU</item>
        <item>Price</item>
        <item>Description</item>
        <item>Image</item>
        <item>Video</item>
    </string-array>

</resources>