<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".inouttracker.activity.CreateCollectionActivity">

    <include
        android:id="@+id/commonToolbar"
        layout="@layout/toolbar_common"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCollectionName"
        style="@style/AppEditText"
        android:layout_margin="@dimen/_10sdp"
        android:layout_below="@+id/commonToolbar"
        android:layout_width="match_parent"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="@string/collection_name"
        android:padding="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescription"
        style="@style/AppEditText"
        android:layout_below="@+id/etCollectionName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="@dimen/_5sdp"
        android:gravity="start"
        android:hint="@string/write"
        android:padding="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCreateCollction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:backgroundTint="@color/appMainColor"
        android:fontFamily="@font/rethinksans_variablefont_wght"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/_10sdp"
        android:text="@string/create_collection"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp" />

</RelativeLayout>