<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlCountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/_6sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/rethinksans_bold"
                android:text="8"
                android:textColor="@color/appMainColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRfidName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_count"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/rethinksans_bold"
                android:text="Total Found"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />


        </RelativeLayout>

        <CheckBox
            android:id="@+id/cbFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/uhf_title_filter"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_bg"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPtr" />

                <EditText
                    android:id="@+id/etPtr"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberSigned"
                    android:text="32" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="(bit)" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvLen_Data" />

                <EditText
                    android:id="@+id/etLen"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberSigned"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(bit)" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvData_Read" />

                <EditText
                    android:id="@+id/etData"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:inputType="textNoSuggestions"
                    android:singleLine="true" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbEPC"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_bg"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="EPC"
                    android:textColor="@drawable/check_text_color" />

                <RadioButton
                    android:id="@+id/rbTID"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_bg"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:text="TID"
                    android:textColor="@drawable/check_text_color" />

                <RadioButton
                    android:id="@+id/rbUser"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_bg"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:text="USER"
                    android:textColor="@drawable/check_text_color" />

                <RadioButton
                    android:id="@+id/rbRESERVED"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_bg"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:text="RESERVED"
                    android:textColor="@drawable/check_text_color"
                    android:visibility="gone" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uhf_msg_r2000_tip" />

                <Button
                    android:id="@+id/btSet"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/setup" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContinuous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/cbPhase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/tv_phase" />

            <TextView
                android:id="@+id/tvContinuous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workTime"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="999999"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:singleLine="true"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/second"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0s"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!--<HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </HorizontalScrollView>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footerButtonll"
            android:layout_below="@+id/rlCountView"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_e0"
                android:gravity="center_vertical"
                android:minWidth="410dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TAG"
                        android:textSize="16sp" />

                    <!--<TextView
                        android:id="@+id/tv_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingStart="6dp"
                        android:text="0"
                        android:textSize="16sp"
                        android:textStyle="bold" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvAll"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="0"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tvTagCount"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="RSSI"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tv_phase"
                    android:textSize="16sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/LvTags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/footerButtonll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edittext_bg"
            android:layout_alignParentBottom="true">


            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btCancel"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:gravity="center_vertical"
                android:elevation="@dimen/_8sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSingleInventory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:text="@string/rbInventorySingle"
                    android:visibility="gone" />

                <!--  <Button
                      android:id="@+id/btnInventory"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_margin="@dimen/_2sdp"
                      android:layout_weight="1"
                      android:text="@string/rbInventoryLoop"
                      android:visibility="gone" />-->

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btStartScan"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/continue_btn_bg"
                    android:backgroundTint="@color/appMainColor"
                    android:enabled="false"
                    android:fontFamily="@font/rethinksans_variablefont_wght"
                    android:gravity="center"
                    android:text="Start Scan"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btStop"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/continue_btn_bg"
                    android:backgroundTint="@color/appMainColor"
                    android:enabled="false"
                    android:fontFamily="@font/rethinksans_variablefont_wght"
                    android:gravity="center"
                    android:text="Stop Scan"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btClear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:text="@string/btClear"
                    android:visibility="gone" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_spinner"
                android:backgroundTint="#E9E9E9"
                android:fontFamily="@font/rethinksans_variablefont_wght"
                android:gravity="center"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="#939393"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

        </LinearLayout>



    </RelativeLayout>
</FrameLayout>
